--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -4,17 +4,22 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-axum = "0.8.1"
+axum = { version = "0.7", features = ["http1", "http2"] }
 axum-extra = "0.10.0"
+hyper = { version = "1.0", features = ["server"] }  # Updated to 1.0
 bcrypt = "0.17.0"
 jsonwebtoken = "9.3.1"
 lettre = "0.11.14"
 serde = "1.0.218"
 serde_json = "1.0.139"
-sqlx = "0.8.3"
-tokio = "1.43.0"
-tower-http = "0.6.2"
+sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
+dotenvy = "0.15"  # For loading environment variables
+chrono = { version = "0.4", features = ["serde"] }
+tokio = { version = "1", features = ["full"] }
+tower-http = { version = "0.6", features = ["trace"] }
 tracing = "0.1.41"
-tracing-subscriber = "0.3.19"
+tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
 uuid = "1.15.0"
 webauthn-rs = "0.5.1"
+openssl = { version = "0.10", features = ["vendored"] }
+tower = "0.5.2"
