--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -4,22 +4,26 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-axum = { version = "0.7", features = ["http1", "http2"] }
+axum = { version = "0.7", features = ["http1", "http2","macros"] }
 axum-extra = "0.10.0"
 hyper = { version = "1.0", features = ["server"] }  # Updated to 1.0
 bcrypt = "0.17.0"
 jsonwebtoken = "9.3.1"
 lettre = "0.11.14"
-serde = "1.0.218"
+serde = { version = "1.0.218", features = ["derive"] }  # Added `derive` feature
 serde_json = "1.0.139"
-sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
+sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "time"] }
 dotenvy = "0.15"  # For loading environment variables
 chrono = { version = "0.4", features = ["serde"] }
 tokio = { version = "1", features = ["full"] }
 tower-http = { version = "0.6", features = ["trace"] }
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
-uuid = "1.15.0"
+uuid = { version = "1.15.0", features = ["serde", "v4"] }  # Added `serde` and `v4` features
 webauthn-rs = "0.5.1"
 openssl = { version = "0.10", features = ["vendored"] }
 tower = "0.5.2"
+argon2 = "0.5"
+dotenv = "0.15"
+rand = "0.8"
+time = { version = "0.3", features = ["serde"] }  # Added `serde` feature
