--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -4,26 +4,24 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-axum = { version = "0.7", features = ["http1", "http2","macros"] }
-axum-extra = "0.10.0"
-hyper = { version = "1.0", features = ["server"] }  # Updated to 1.0
-bcrypt = "0.17.0"
-jsonwebtoken = "9.3.1"
-lettre = "0.11.14"
-serde = { version = "1.0.218", features = ["derive"] }  # Added `derive` feature
-serde_json = "1.0.139"
-sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "time"] }
-dotenvy = "0.15"  # For loading environment variables
-chrono = { version = "0.4", features = ["serde"] }
-tokio = { version = "1", features = ["full"] }
-tower-http = { version = "0.6", features = ["trace"] }
-tracing = "0.1.41"
-tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
-uuid = { version = "1.15.0", features = ["serde", "v4"] }  # Added `serde` and `v4` features
-webauthn-rs = "0.5.1"
-openssl = { version = "0.10", features = ["vendored"] }
-tower = "0.5.2"
-argon2 = "0.5"
-dotenv = "0.15"
-rand = "0.8"
-time = { version = "0.3", features = ["serde"] }  # Added `serde` feature
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["env-filter", "std", "fmt"] }
+serde = { version = "1.0", features = ["derive"] }
+webauthn-rs = { version = "0.5.1", features = ["danger-allow-state-serialisation"] }
+axum = { version = "0.7" }
+tokio = { version = "1.22.0", features = ["full"] }
+uuid = { version = "1.1.2", features = ["v4"] }
+url = "2"
+thiserror = "1.0"
+tower = "0.5"
+tower-http = { version = "0.6", features = ["cors", "fs"] }
+tower-sessions = "0.13"
+http = "1.2.0"
+mongodb = "3.2.1"
+dotenv = "0.15.0"
+futures = "0.3.31"
+
+[features]
+default = ["javascript"]
+wasm = []
+javascript = []
