--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -20,6 +20,7 @@ http = "1.2.0"
 mongodb = "3.2.1"
 dotenv = "0.15.0"
 futures = "0.3.31"
+chrono = "0.4.40"
 
 [features]
 default = ["javascript"]
