--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@simplewebauthn/browser": "^13.1.0",
     "axios": "^1.8.0",
     "framer-motion": "^12.4.7",
     "google": "^2.1.0",
