--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@simplewebauthn/browser": "^13.1.0",
     "axios": "^1.8.0",
@@ -18,6 +19,7 @@
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "recharts": "^2.15.1",
     "socket.io-client": "^4.8.1",
     "zustand": "^5.0.3"
