--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -77,7 +77,7 @@ jobs:
             git pull origin main
 
             # Ensure backend/.env exists with the correct Elastic IP
-            cat <<EOT > backend/.env
+            cat > backend/.env << 'EOT'
             MONGODB_URI=${{ secrets.MONGODB_URI }}
             PORT=10000
             RP_ID=${{ secrets.AWS_EC2_IP }}
@@ -96,6 +96,19 @@ jobs:
               sudo docker-compose down
               sudo docker-compose up -d
             fi
+
+            # Wait for containers to be healthy (up to 60 seconds)
+            for i in {1..12}; do
+              if [ $(docker ps -q -f name=polling_app-backend-1 | wc -l) -eq 1 ] && [ $(docker ps -q -f name=polling_app-frontend-1 | wc -l) -eq 1 ]; then
+                echo "Both containers are running!"
+                exit 0
+              fi
+              echo "Waiting for containers to start... ($i/12)"
+              sleep 5
+            done
+
+            echo "Error: One or both containers failed to start!"
+            exit 1
           EOF
 
       - name: Notify Discord on Success
