--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,8 @@ services:
     ports:
       - "3000:3000"
     environment:
-      - NEXT_PUBLIC_BACKEND_URL=http://13.203.183.22:10000
-      - NEXT_PUBLIC_WS_URL=ws://13.203.183.22:10000/ws
+      - NEXT_PUBLIC_BACKEND_URL=http://pollingapp.local:10000
+      - NEXT_PUBLIC_WS_URL=ws://pollingapp.local:10000/ws
     depends_on:
       - backend
 
